--- a/log1.ini
+++ b/log1.ini
@@ -4,7 +4,7 @@ BROKER_PORT = 5672
 USER = test
 PASSWORD = test
 VHOST = testHost
-EXCHANGE = errorExchange1
+EXCHANGE = errorExchange
 QUEUE = errorQueue1
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
