--- a/log1.ini
+++ b/log1.ini
@@ -4,8 +4,8 @@ BROKER_PORT = 5672
 USER = test
 PASSWORD = test
 VHOST = testHost
-EXCHANGE = errorExchange
-QUEUE = errorQueue1
+EXCHANGE = Errorlog
+QUEUE = Errorlog
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
